criaçao do arquivo css.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype HTML>
 <html>
   <head>
+    <link rel="stylesheet" href="estilo.css" style="text/css">
     <title>Meu site</title>
   </head>
 <body>
